Updates to new hosting location

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-    <title>Gradient's Download Host</title>
+    <title>ButruilleG's Download Host</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0, user-scalable=yes">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="stylesheet.css">
@@ -33,9 +33,9 @@
             <div id="downloadsDiv">
                 <div class="downloadDiv">
                     <h2>Downloads</h2>
-                    <p><a href="/downloads/4xSynth_Win32.zip">32-bit Download - V1.1.4c</a></p>
-                    <p><a href="/downloads/4xSynth_x64.zip">64-bit Download - V1.1.4c</a></p>
-                    <p><a href="/downloads/4xSynth_Skin_Demo.zip">Demo Skin</a></p>
+                    <p><a href="https://github.com/ButruilleG/butruilleg.github.io/raw/master/downloads/4xSyth_Win32.zip">32-bit Download - V1.1.4c</a></p>
+                    <p><a href="https://github.com/ButruilleG/butruilleg.github.io/raw/master/downloads/4xSynth_x64.zip">64-bit Download - V1.1.4c</a></p>
+                    <p><a href="https://github.com/ButruilleG/butruilleg.github.io/raw/master/downloads/4xSynth_Skin_Demo.zip">Demo Skin</a></p>
 
                 </div>
 
