--- a/other_downloads.html
+++ b/other_downloads.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-    <title>Gradient's Download Host</title>
+    <title>ButruilleG's Download Host</title>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0, user-scalable=yes">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="stylesheet.css">
@@ -12,9 +12,9 @@
             <a class="navbutton floaty" href="index.html">HOME</a><a class="navbutton floaty" href="https://soundcloud.com/gradientelectro">MY SOUNDCLOUD</a>
         </div>
         <div class="content centerDiv resizeMiddle">
-            <h1><a href="/downloads/drum_samples_gradient.zip">DRUM SAMPLES</a></h1>
+            <h1><a href="https://github.com/ButruilleG/butruilleg.github.io/raw/master/downloads/drum_samples_gradient.zip">DRUM SAMPLES</a></h1>
             <p>Samples are provided royalty free. Feel free to use and redistribute them as you see fit.</p>
-            <h1><a href="/downloads/Hybrid_3_presets_gradient.zip">HYBRID 3 PRESETS</a></h1>
+            <h1><a href="https://github.com/ButruilleG/butruilleg.github.io/raw/master/downloads/Hybrid_3_presets_gradient.zip">HYBRID 3 PRESETS</a></h1>
             <p>
                 Presets are provided royalty free. Feel free to use and redistribute them as you see fit.<br />
                 Please note that presets are provided as .fxb files for use with Hybrid 3. Open them in your DAW, and not Hybrid 3's interface.
